Add base structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Sławomir Sojka</title>
+		<link rel="stylesheet" href="style.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Caveat&family=Josefin+Sans:wght@100;200;300;400&family=Open+Sans+Condensed:wght@300&family=Quicksand:wght@300;400;500&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<ul class="menu">
+					<li class="logo"><h1>PORTFOLIO</h1></li>
+					<li class="item"><a href="#">O mnie</a></li>
+					<li class="item"><a href="#">Kontakt</a></li>
+					<li class="item"><a href="#">Projekty</a></li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<div class="main--background-container">
+				<div class="background--content">
+					<h2>Sławomir Sojka</h2>
+				</div>
+			</div>
+			<section class="content">
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+					necessitatibus iure temporibus doloribus, alias quos, error ipsum
+					fugiat perferendis et impedit voluptatibus tempore excepturi deleniti
+					accusamus esse commodi praesentium quod.
+				</p>
+			</section>
+		</main>
+		<footer>
+			<p>2021 - Sławomir Sojka</p>
+		</footer>
+	</body>
+</html>
