Add responsive design, strucute SASS

--- a/index.html
+++ b/index.html
@@ -24,18 +24,64 @@
 			</nav>
 		</header>
 		<main>
-			<div class="main--background-container">
+			<section class="main--background-container">
 				<div class="background--content">
 					<h2>Sławomir Sojka</h2>
 				</div>
-			</div>
+			</section>
 			<section class="content">
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-					necessitatibus iure temporibus doloribus, alias quos, error ipsum
-					fugiat perferendis et impedit voluptatibus tempore excepturi deleniti
-					accusamus esse commodi praesentium quod.
-				</p>
+				<article class="content--article__primary">
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+						necessitatibus iure temporibus doloribus, alias quos, error ipsum
+						fugiat perferendis et impedit voluptatibus tempore excepturi
+						deleniti accusamus esse commodi praesentium quod.
+					</p>
+				</article>
+				<article class="content--article__secondary">
+					<p>
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
+						magnam ipsam nisi sunt, impedit architecto accusantium, dignissimos
+						amet ad reiciendis libero nam sit nesciunt laborum? Ipsam doloremque
+						quod dolorem eum. Animi architecto, ullam sit sunt velit sapiente
+						quia at odit praesentium ex quis voluptas eos nostrum iure
+						voluptatem deleniti libero quod quasi ad unde. Nihil reiciendis
+						atque delectus laudantium quibusdam. Temporibus doloremque
+						cupiditate suscipit culpa, quo ad dolores similique vitae itaque
+						fugiat laudantium enim eius nesciunt aut eligendi iusto excepturi
+						maxime soluta dolor. Eligendi necessitatibus quod praesentium
+						maxime, doloribus placeat. Dignissimos ut quis fugiat molestias
+						magnam. Animi fugit delectus officia cupiditate assumenda est ex
+						vitae et hic, aspernatur harum, nemo possimus ducimus facilis
+						quaerat. Officiis maiores nobis magnam vitae odit? Rerum quas harum
+						enim deserunt laudantium, eos neque minus perferendis tempora
+						dolorem accusamus natus numquam, sapiente tenetur. Magnam distinctio
+						voluptates beatae voluptate, similique, cum iusto aspernatur eos
+						inventore sequi ipsum!
+					</p>
+				</article>
+				<article class="content--article__primary">
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
+						eligendi fuga mollitia esse consequuntur saepe fugiat soluta aperiam
+						dolores, possimus impedit reiciendis nostrum sint eos accusantium,
+						doloremque iste nobis alias! Commodi nemo quos a minima recusandae
+						sequi ratione harum eos officiis optio, nulla odio, quis temporibus
+						id, debitis earum hic doloremque deserunt vero facilis sint beatae
+						impedit omnis? Totam, eveniet? Beatae sint ullam unde dignissimos
+						rerum fuga dolor nemo, aspernatur reiciendis odio voluptates
+						recusandae repellat reprehenderit mollitia corrupti, error
+						architecto natus explicabo magni temporibus deleniti facere vel?
+						Iusto, accusantium labore? Consectetur quaerat sapiente id,
+						perferendis aut repellendus, ducimus ratione laudantium, unde
+						delectus corporis! Dolore quod ipsum id beatae mollitia recusandae
+						distinctio totam deserunt aliquam dolores. Voluptatem, doloremque
+						eum? Repudiandae, iste. Accusantium quae exercitationem reiciendis
+						illo, eos dolores eligendi. Perspiciatis possimus sit, at voluptatum
+						iure neque blanditiis optio excepturi natus quas voluptas eveniet
+						nobis maxime ab incidunt assumenda! Necessitatibus, optio illum.
+					</p>
+				</article>
 			</section>
 		</main>
 		<footer>
