Add responsive menu

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 			<nav>
 				<ul class="menu">
 					<li class="logo"><h1>PORTFOLIO</h1></li>
-					<li class="item"><a href="#">O mnie</a></li>
-					<li class="item"><a href="#">Kontakt</a></li>
-					<li class="item"><a href="#">Projekty</a></li>
+					<li class="item"><a href="#">Contact</a></li>
+					<li class="item"><a href="#">Projects & Skills</a></li>
+					<li class="item"><a href="#">About me</a></li>
+					<div class="menu-btn">
+						<div class="menu-btn__burger"></div>
+					</div>
+					<script src="main.js"></script>
 				</ul>
 			</nav>
 		</header>
