Update image responsivness, comment image text

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 		<header>
 			<nav>
 				<ul class="menu">
-					<li class="logo"><h1>PORTFOLIO</h1></li>
-					<li class="item"><a href="#">Contact</a></li>
-					<li class="item"><a href="#">Projects & Skills</a></li>
-					<li class="item"><a href="#">About me</a></li>
+					<li class="logo">
+						<h1><a href="#about-me">Sławomir Sojka</a></h1>
+					</li>
+					<li class="item"><a href="#experience">Experience</a></li>
+					<li class="item"><a href="#projects">Projects</a></li>
+					<li class="item"><a href="#skills">Skills</a></li>
+					<li class="item"><a href="#contact">Contact</a></li>
+					<li class="item"><a href="./cv">Resume</a></li>
 					<div class="menu-btn">
 						<div class="menu-btn__burger"></div>
 					</div>
@@ -29,20 +33,24 @@
 		</header>
 		<main>
 			<section class="main--background-container">
-				<div class="background--content">
-					<h2>Sławomir Sojka</h2>
-				</div>
+				<!-- <div class="background--content">
+					<h2>FULL STACK DEVELOPER</h2>
+				</div> -->
 			</section>
 			<section class="content">
-				<article class="content--article__primary">
+				<article class="content--article__primary" id="about-me">
 					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-						necessitatibus iure temporibus doloribus, alias quos, error ipsum
-						fugiat perferendis et impedit voluptatibus tempore excepturi
-						deleniti accusamus esse commodi praesentium quod.
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+						animi alias libero dignissimos. Consequatur sed numquam dolores
+						nulla sint optio cum nihil temporibus minus libero. Non facere
+						corporis omnis suscipit? Doloremque commodi sequi quibusdam odit
+						reprehenderit fugiat ex, similique voluptates officia, perferendis
+						porro eius vitae ullam consequuntur blanditiis aspernatur reiciendis
+						quas architecto. Impedit fugit accusamus exercitationem similique
+						harum tenetur et.
 					</p>
 				</article>
-				<article class="content--article__secondary">
+				<article class="content--article__secondary" id="experience">
 					<p>
 						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
 						magnam ipsam nisi sunt, impedit architecto accusantium, dignissimos
@@ -64,7 +72,60 @@
 						inventore sequi ipsum!
 					</p>
 				</article>
-				<article class="content--article__primary">
+
+				<article class="content--article__primary" id="projects">
+					<p>
+						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
+						magnam ipsam nisi sunt, impedit architecto accusantium, dignissimos
+						amet ad reiciendis libero nam sit nesciunt laborum? Ipsam doloremque
+						quod dolorem eum. Animi architecto, ullam sit sunt velit sapiente
+						quia at odit praesentium ex quis voluptas eos nostrum iure
+						voluptatem deleniti libero quod quasi ad unde. Nihil reiciendis
+						atque delectus laudantium quibusdam. Temporibus doloremque
+						cupiditate suscipit culpa, quo ad dolores similique vitae itaque
+						fugiat laudantium enim eius nesciunt aut eligendi iusto excepturi
+						maxime soluta dolor. Eligendi necessitatibus quod praesentium
+						maxime, doloribus placeat. Dignissimos ut quis fugiat molestias
+						magnam. Animi fugit delectus officia cupiditate assumenda est ex
+						vitae et hic, aspernatur harum, nemo possimus ducimus facilis
+						quaerat. Officiis maiores nobis magnam vitae odit? Rerum quas harum
+						enim deserunt laudantium, eos neque minus perferendis tempora
+						dolorem accusamus natus numquam, sapiente tenetur. Magnam distinctio
+						voluptates beatae voluptate, similique, cum iusto aspernatur eos
+						inventore sequi ipsum! Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit. Placeat odit deserunt dolor provident odio, minima
+						quisquam aperiam nam molestias nostrum tenetur adipisci dignissimos
+						accusantium eius reiciendis est architecto. Fuga, cumque? Lorem
+						ipsum dolor sit amet consectetur, adipisicing elit. Laborum mollitia
+						quia saepe! Fugit iste distinctio obcaecati nobis nesciunt pariatur
+						ea fuga. Ad consequatur saepe eveniet quibusdam. Dolore totam
+						voluptates maxime. Lorem ipsum dolor sit, amet consectetur
+						adipisicing elit. Doloribus sequi error tempora animi qui odio
+						aspernatur impedit sed suscipit blanditiis minus, non velit iure nam
+						voluptas quidem aliquid ea maxime. Pariatur magni ipsa unde
+						inventore vitae, sunt modi nam eligendi molestiae quo illo laborum
+						mollitia reiciendis a id sint tempora cupiditate voluptas non
+						accusantium, hic voluptate facere dignissimos. Perspiciatis, ab?
+						Quod tempore ab culpa, voluptates amet dolore harum dolorum minima
+						in explicabo vero repellat esse quaerat at voluptatem iure dolor
+						enim atque rerum ea fugit odit ipsum, facilis iste. Esse.
+					</p>
+				</article>
+				<article class="content--article__secondary" id="skills">
+					<p>
+						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
+						totam deserunt, atque fuga esse perspiciatis dolores officia sit
+						nesciunt fugiat ipsam neque at nihil nam ab ea. Obcaecati,
+						voluptates optio? Rerum doloribus quasi rem eius ut suscipit minus,
+						consectetur illo neque accusamus nemo vel modi excepturi est!
+						Adipisci, quod. Velit perferendis aperiam quo fuga sequi vel maiores
+						magni nesciunt voluptatibus. Adipisci earum harum quia ipsa ad
+						quidem alias et rem inventore voluptas? Dolorem rem expedita, unde
+						non ipsa sapiente suscipit commodi esse atque itaque sint quibusdam
+						iste vero dolore repudiandae.
+					</p>
+				</article>
+				<article class="content--article__primary" id="contact">
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
 						eligendi fuga mollitia esse consequuntur saepe fugiat soluta aperiam
@@ -72,18 +133,6 @@
 						doloremque iste nobis alias! Commodi nemo quos a minima recusandae
 						sequi ratione harum eos officiis optio, nulla odio, quis temporibus
 						id, debitis earum hic doloremque deserunt vero facilis sint beatae
-						impedit omnis? Totam, eveniet? Beatae sint ullam unde dignissimos
-						rerum fuga dolor nemo, aspernatur reiciendis odio voluptates
-						recusandae repellat reprehenderit mollitia corrupti, error
-						architecto natus explicabo magni temporibus deleniti facere vel?
-						Iusto, accusantium labore? Consectetur quaerat sapiente id,
-						perferendis aut repellendus, ducimus ratione laudantium, unde
-						delectus corporis! Dolore quod ipsum id beatae mollitia recusandae
-						distinctio totam deserunt aliquam dolores. Voluptatem, doloremque
-						eum? Repudiandae, iste. Accusantium quae exercitationem reiciendis
-						illo, eos dolores eligendi. Perspiciatis possimus sit, at voluptatum
-						iure neque blanditiis optio excepturi natus quas voluptas eveniet
-						nobis maxime ab incidunt assumenda! Necessitatibus, optio illum.
 					</p>
 				</article>
 			</section>
