Add about me text, change main image responsivness

--- a/index.html
+++ b/index.html
@@ -39,15 +39,26 @@
 			</section>
 			<section class="content">
 				<article class="content--article__primary" id="about-me">
+					<h2>
+						Hi, I’m Sławomir Sojka.
+						<br />
+						I'm a still learning
+						<span class="text--primary">Full Stack Developer</span>.
+					</h2>
+					<br />
 					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-						animi alias libero dignissimos. Consequatur sed numquam dolores
-						nulla sint optio cum nihil temporibus minus libero. Non facere
-						corporis omnis suscipit? Doloremque commodi sequi quibusdam odit
-						reprehenderit fugiat ex, similique voluptates officia, perferendis
-						porro eius vitae ullam consequuntur blanditiis aspernatur reiciendis
-						quas architecto. Impedit fugit accusamus exercitationem similique
-						harum tenetur et.
+						I am passionate about programming and fascinated with new
+						technologies.
+					</p>
+					<br />
+					<p>
+						During my journey with programming, I tried fields such as
+						<span class="text--primary">software development</span>,
+						<span class="text--secondary"
+							>front-end/back-end web development</span
+						>, <span class="text--primary">database management</span>,
+						<span class="text--primary">graphic design</span>, and
+						<span class="text--secondary">video game development</span>.
 					</p>
 				</article>
 				<article class="content--article__secondary" id="experience">
