Add subheadings and resume

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 					<li class="logo">
 						<h1><a href="#about-me">Sławomir Sojka</a></h1>
 					</li>
-					<li class="item"><a href="#experience">Experience</a></li>
-					<li class="item"><a href="#projects">Projects</a></li>
+					<li class="item">
+						<a href="#experience">Experience</a>
+					</li>
+					<li class="item"><a href="#projects">Portfolio</a></li>
 					<li class="item"><a href="#skills">Skills</a></li>
 					<li class="item"><a href="#contact">Contact</a></li>
-					<li class="item"><a href="./cv">Resume</a></li>
+					<li class="item"><a href="./resume">Resume</a></li>
 					<div class="menu-btn">
 						<div class="menu-btn__burger"></div>
 					</div>
@@ -39,6 +41,7 @@
 			</section>
 			<section class="content">
 				<article class="content--article__primary" id="about-me">
+					<h3>About me</h3>
 					<h2>
 						Hi, I’m Sławomir Sojka.
 						<br />
@@ -62,6 +65,7 @@
 					</p>
 				</article>
 				<article class="content--article__secondary" id="experience">
+					<h3>Experience</h3>
 					<p>
 						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
 						magnam ipsam nisi sunt, impedit architecto accusantium, dignissimos
@@ -85,6 +89,7 @@
 				</article>
 
 				<article class="content--article__primary" id="projects">
+					<h3>Portfolio</h3>
 					<p>
 						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
 						magnam ipsam nisi sunt, impedit architecto accusantium, dignissimos
@@ -123,6 +128,7 @@
 					</p>
 				</article>
 				<article class="content--article__secondary" id="skills">
+					<h3>Skills</h3>
 					<p>
 						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
 						totam deserunt, atque fuga esse perspiciatis dolores officia sit
@@ -137,6 +143,7 @@
 					</p>
 				</article>
 				<article class="content--article__primary" id="contact">
+					<h3>Contact</h3>
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
 						eligendi fuga mollitia esse consequuntur saepe fugiat soluta aperiam
