Add experience content

--- a/index.html
+++ b/index.html
@@ -105,26 +105,34 @@
 				</article>
 				<article class="content--article__secondary" id="experience">
 					<h2>Experience</h2>
-					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
-						magnam ipsam nisi sunt, impedit architecto accusantium, dignissimos
-						amet ad reiciendis libero nam sit nesciunt laborum? Ipsam doloremque
-						quod dolorem eum. Animi architecto, ullam sit sunt velit sapiente
-						quia at odit praesentium ex quis voluptas eos nostrum iure
-						voluptatem deleniti libero quod quasi ad unde. Nihil reiciendis
-						atque delectus laudantium quibusdam. Temporibus doloremque
-						cupiditate suscipit culpa, quo ad dolores similique vitae itaque
-						fugiat laudantium enim eius nesciunt aut eligendi iusto excepturi
-						maxime soluta dolor. Eligendi necessitatibus quod praesentium
-						maxime, doloribus placeat. Dignissimos ut quis fugiat molestias
-						magnam. Animi fugit delectus officia cupiditate assumenda est ex
-						vitae et hic, aspernatur harum, nemo possimus ducimus facilis
-						quaerat. Officiis maiores nobis magnam vitae odit? Rerum quas harum
-						enim deserunt laudantium, eos neque minus perferendis tempora
-						dolorem accusamus natus numquam, sapiente tenetur. Magnam distinctio
-						voluptates beatae voluptate, similique, cum iusto aspernatur eos
-						inventore sequi ipsum!
-					</p>
+					<div class="card">
+						<div class="card-title">
+							<div class="card-title__company">
+<img src="./resources/icons/Eplan-logo.svg" alt="HTML" />
+							<h4>EPLAN</h4>
+							</div>
+							
+							<span class="card-title__work">Internship - Full Stack Developer</span>
+						</div>
+						<div class="card-content">
+							<span>About company in 1 sentence</span>
+							<h5>Project</h5>
+								<p></p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Aperiam mollitia minima voluptas saepe voluptatibus nesciunt
+									consequatur libero! Natus, qui consequuntur laborum quibusdam
+									necessitatibus nostrum assumenda vero sapiente corrupti enim
+									voluptatum.
+								</p>
+							<h5>Team</h5>
+								<p>
+									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa modi delectus at maiores ab eum, necessitatibus velit aperiam itaque error rerum aliquam ad provident est dolorum facilis quae, sapiente inventore.
+								</p>
+						</div>
+						<div class="card-footer">
+							<span>Aug 2020 - Jun 2021 | Cieszyn, Śląskie</span>
+						</div>
+					</div>
 				</article>
 
 				<article class="content--article__primary" id="projects">
