Add subheader to experience box

--- a/index.html
+++ b/index.html
@@ -108,26 +108,35 @@
 					<div class="card">
 						<div class="card-title">
 							<div class="card-title__company">
-<img src="./resources/icons/Eplan-logo.svg" alt="HTML" />
-							<h4>EPLAN</h4>
+								<a href="https://www.eplan-software.com/"
+									><img src="./resources/icons/Eplan-logo.svg" alt="HTML"
+								/></a>
+								<a href="https://www.eplan-software.com/"><h4>EPLAN</h4></a>
 							</div>
-							
-							<span class="card-title__work">Internship - Full Stack Developer</span>
+
+							<span class="card-title__work"
+								>Internship - Full Stack Developer</span
+							>
 						</div>
 						<div class="card-content">
-							<span>About company in 1 sentence</span>
+							<span
+								><em
+									>EPLAN provides software and service solutions in the fields
+									of electrical, automation and mechatronic engineering.</em
+								></span
+							>
 							<h5>Project</h5>
-								<p></p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Aperiam mollitia minima voluptas saepe voluptatibus nesciunt
-									consequatur libero! Natus, qui consequuntur laborum quibusdam
-									necessitatibus nostrum assumenda vero sapiente corrupti enim
-									voluptatum.
-								</p>
+							<p>
+								Working on an online book library project in a team of 3 under
+								the supervision of an internship tutor
+							</p>
 							<h5>Team</h5>
-								<p>
-									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa modi delectus at maiores ab eum, necessitatibus velit aperiam itaque error rerum aliquam ad provident est dolorum facilis quae, sapiente inventore.
-								</p>
+							<p>
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+								modi delectus at maiores ab eum, necessitatibus velit aperiam
+								itaque error rerum aliquam ad provident est dolorum facilis
+								quae, sapiente inventore.
+							</p>
 						</div>
 						<div class="card-footer">
 							<span>Aug 2020 - Jun 2021 | Cieszyn, Śląskie</span>
