Add portfolio content

--- a/index.html
+++ b/index.html
@@ -146,42 +146,60 @@
 
 				<article class="content--article__primary" id="projects">
 					<h2>Portfolio</h2>
-					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
-						magnam ipsam nisi sunt, impedit architecto accusantium, dignissimos
-						amet ad reiciendis libero nam sit nesciunt laborum? Ipsam doloremque
-						quod dolorem eum. Animi architecto, ullam sit sunt velit sapiente
-						quia at odit praesentium ex quis voluptas eos nostrum iure
-						voluptatem deleniti libero quod quasi ad unde. Nihil reiciendis
-						atque delectus laudantium quibusdam. Temporibus doloremque
-						cupiditate suscipit culpa, quo ad dolores similique vitae itaque
-						fugiat laudantium enim eius nesciunt aut eligendi iusto excepturi
-						maxime soluta dolor. Eligendi necessitatibus quod praesentium
-						maxime, doloribus placeat. Dignissimos ut quis fugiat molestias
-						magnam. Animi fugit delectus officia cupiditate assumenda est ex
-						vitae et hic, aspernatur harum, nemo possimus ducimus facilis
-						quaerat. Officiis maiores nobis magnam vitae odit? Rerum quas harum
-						enim deserunt laudantium, eos neque minus perferendis tempora
-						dolorem accusamus natus numquam, sapiente tenetur. Magnam distinctio
-						voluptates beatae voluptate, similique, cum iusto aspernatur eos
-						inventore sequi ipsum! Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Placeat odit deserunt dolor provident odio, minima
-						quisquam aperiam nam molestias nostrum tenetur adipisci dignissimos
-						accusantium eius reiciendis est architecto. Fuga, cumque? Lorem
-						ipsum dolor sit amet consectetur, adipisicing elit. Laborum mollitia
-						quia saepe! Fugit iste distinctio obcaecati nobis nesciunt pariatur
-						ea fuga. Ad consequatur saepe eveniet quibusdam. Dolore totam
-						voluptates maxime. Lorem ipsum dolor sit, amet consectetur
-						adipisicing elit. Doloribus sequi error tempora animi qui odio
-						aspernatur impedit sed suscipit blanditiis minus, non velit iure nam
-						voluptas quidem aliquid ea maxime. Pariatur magni ipsa unde
-						inventore vitae, sunt modi nam eligendi molestiae quo illo laborum
-						mollitia reiciendis a id sint tempora cupiditate voluptas non
-						accusantium, hic voluptate facere dignissimos. Perspiciatis, ab?
-						Quod tempore ab culpa, voluptates amet dolore harum dolorum minima
-						in explicabo vero repellat esse quaerat at voluptatem iure dolor
-						enim atque rerum ea fugit odit ipsum, facilis iste. Esse.
-					</p>
+					<article class="box-project">
+						<div class="content--image">
+							<img
+								src="./resources/images/download.png"
+								alt="Internet library"
+							/>
+						</div>
+						<div class="box-project__content">
+							<h3>Book rental</h3>
+							<span>Angular CRUD application</span>
+							<div class="content--main">
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+									minima repudiandae voluptate unde vero nihil optio explicabo
+									fuga! Est magnam dicta delectus quod reprehenderit consequatur
+									provident eum odit laboriosam excepturi?
+								</p>
+							</div>
+							<div class="content--technologies">
+								<h4>Technology</h4>
+								<div class="card-skill__icon">
+									<div class="box-skill">
+										<img
+											src="./resources/icons/angularjs-original.svg"
+											alt=""
+										/>
+										<p>Angular</p>
+									</div>
+									<div class="box-skill">
+										<img src="./resources/icons/nodejs-original.svg" alt="" />
+										<p>Node.js</p>
+									</div>
+									<div class="box-skill">
+										<img
+											src="./resources/icons/sequelize-original.svg"
+											alt=""
+										/>
+										<p>Sequelize</p>
+									</div>
+									<div class="box-skill">
+										<img src="./resources/icons/sqlite-original.svg" alt="" />
+										<p>SQLite</p>
+									</div>
+									<div class="box-skill">
+										<img
+											src="./resources/icons/angularmaterial-original.svg"
+											alt=""
+										/>
+										<p>Angular Material</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</article>
 				</article>
 				<article class="content--article__secondary" id="skills">
 					<h2>Skills</h2>
