Add project & expiercience content

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
 					</p>
 					<div class="article--email-box">
 						<div class="centered-container">
-							<a
-								class="link link--arrowed"
-								href="mailto:sojkaslawek123@gmail.com"
+							<a class="link link--arrowed" href="mailto:slawomir@sojka.codes"
 								>Email Me
 								<svg
 									class="arrow-icon"
@@ -125,18 +123,35 @@
 									of electrical, automation and mechatronic engineering.</em
 								></span
 							>
-							<h5>Project</h5>
-							<p>
-								Working on an online book library project in a team of 3 under
-								the supervision of an internship tutor
-							</p>
-							<h5>Team</h5>
-							<p>
-								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
-								modi delectus at maiores ab eum, necessitatibus velit aperiam
-								itaque error rerum aliquam ad provident est dolorum facilis
-								quae, sapiente inventore.
-							</p>
+							<h5>PROJECT</h5>
+							<strong
+								><p>
+									Working on an online
+									<strong><a href="#book-rental">book library</a></strong>
+									project in the main team of 3, under the supervision of an
+									internship tutor.
+								</p></strong
+							>
+							<ul>
+								<li>
+									<p>
+										A web application that is designed to serve employees in
+										borrowing books from the company bookcase.
+									</p>
+								</li>
+								<li>
+									<p>
+										<strong>Front End tools</strong>: HTML, CSS, Angular,
+										Angular Material, TypeScript, JavaScript.
+									</p>
+								</li>
+								<li>
+									<p>
+										<strong>Back End tools</strong>: Node.js, Sequelize,
+										Express.js, SQLite.
+									</p>
+								</li>
+							</ul>
 						</div>
 						<div class="card-footer">
 							<span>Aug 2020 - Jun 2021 | Cieszyn, Śląskie</span>
@@ -146,10 +161,10 @@
 
 				<article class="content--article__primary" id="projects">
 					<h2>Portfolio</h2>
-					<article class="box-project">
+					<article class="box-project" id="book-rental">
 						<div class="content--image">
 							<img
-								src="./resources/images/download.png"
+								src="./resources/images/EPLAN - Biblioteka (1)_framed.png"
 								alt="Internet library"
 							/>
 						</div>
@@ -158,14 +173,26 @@
 							<span>Angular CRUD application</span>
 							<div class="content--main">
 								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-									minima repudiandae voluptate unde vero nihil optio explicabo
-									fuga! Est magnam dicta delectus quod reprehenderit consequatur
-									provident eum odit laboriosam excepturi?
+									An online <strong>book catalog</strong> designed for EPLAN
+									company during internship.
+								</p>
+								<p>
+									User-side web application includes functions such as
+									<strong>creating accounts</strong>,
+									<strong>browsing</strong> and
+									<strong>borrowing</strong> books.
+								</p>
+								<p>
+									The admin side allows for <strong>user management</strong>,
+									and fully supports <strong>CRUD queries</strong>.
 								</p>
 							</div>
 							<div class="content--technologies">
-								<h4>Technology</h4>
+								<!-- <h5>Technology</h5>
+								<p>
+									The app is built using Angular, with a Node.js backend for
+									handling API requests, and runs on Heroku.
+								</p> -->
 								<div class="card-skill__icon">
 									<div class="box-skill">
 										<img
@@ -173,6 +200,13 @@
 											alt=""
 										/>
 										<p>Angular</p>
+									</div>
+									<div class="box-skill">
+										<img
+											src="./resources/icons/angularmaterial-original.svg"
+											alt=""
+										/>
+										<p>Angular Material</p>
 									</div>
 									<div class="box-skill">
 										<img src="./resources/icons/nodejs-original.svg" alt="" />
@@ -191,10 +225,10 @@
 									</div>
 									<div class="box-skill">
 										<img
-											src="./resources/icons/angularmaterial-original.svg"
+											src="./resources/icons/heroku-original-wordmark.svg"
 											alt=""
 										/>
-										<p>Angular Material</p>
+										<p>Heroku</p>
 									</div>
 								</div>
 							</div>
@@ -324,16 +358,16 @@
 							<h4>I'll be glad to answer your questions</h4>
 							<div class="contact-mail">
 								<p>
-									<a href="mailto:sojkaslawek123@gmail.com"> Get in Touch</a>
+									<a href="mailto:slawomir@sojka.codes"> Get in Touch</a>
 								</p>
 							</div>
 						</div>
 
 						<div class="contact-links">
 							<button class="btn--mail">
-								<a href="mailto:sojkaslawek123@gmail.com"
+								<a href="mailto:slawomir@sojka.codes"
 									><img src="./resources/icons/email.svg" alt="" />
-									<span>sojkaslawek123@gmail.com</span></a
+									<span>slawomir@sojka.codes</span></a
 								>
 							</button>
 							<button class="btn--cv">
@@ -344,7 +378,7 @@
 							</button>
 							<button class="btn--linkedin">
 								<a
-									href="https://www.linkedin.com/in/s%C5%82awomir-sojka-877ba4213/"
+									href="https://www.linkedin.com/in/slawomir-sojka"
 									target="_blank"
 									><img src="./resources/icons/linkedin-original.svg" alt="" />
 									<span>Linkedin</span>
